# tensorflow-1-public

./: flake.nix  pyproject.toml  shell.nix
C1/W1/ungraded_lab/: C1_W1_Lab_1_hello_world_nn.ipynb
C1/W2/ungraded_labs/: C1_W2_Lab_1_beyond_hello_world.ipynb
C1/W3/assignment/: C1W3_Assignment.ipynb
C1/W3/ungraded_labs/: C1_W3_Lab_1_improving_accuracy_using_convolutions.ipynb  C1_W3_Lab_2_exploring_convolutions.ipynb
C1/W4/assignment/: C1W4_Assignment.ipynb
C1/W4/ungraded_labs/: C1_W4_Lab_1_image_generator_no_validation.ipynb  C1_W4_Lab_2_image_generator_with_validation.ipynb  C1_W4_Lab_3_compacted_images.ipynb
C2/W1/assignment/: C2W1_Assignment.ipynb
C2/W1/ungraded_lab/: C2_W1_Lab_1_cats_vs_dogs.ipynb
C2/W2/assignment/: C2W2_Assignment.ipynb
C2/W2/ungraded_labs/: C2_W2_Lab_1_cats_v_dogs_augmentation.ipynb  C2_W2_Lab_2_horses_v_humans_augmentation.ipynb
C2/W3/assignment/: C2W3_Assignment.ipynb
C2/W3/ungraded_lab/: C2_W3_Lab_1_transfer_learning.ipynb
C3/W1/assignment/: C3W1_Assignment.ipynb
C3/W1/ungraded_labs/: C3_W1_Lab_1_tokenize_basic.ipynb  C3_W1_Lab_2_sequences_basic.ipynb  C3_W1_Lab_3_sarcasm.ipynb
C3/W2/assignment/: C3W2_Assignment.ipynb
C3/W2/ungraded_labs/: C3_W2_Lab_1_imdb.ipynb  C3_W2_Lab_2_sarcasm_classifier.ipynb  C3_W2_Lab_3_imdb_subwords.ipynb
C3/W3/assignment/: C3W3_Assignment.ipynb  stats.pur
C3/W3/ungraded_labs/: C3_W3_Lab_1_single_layer_LSTM.ipynb  C3_W3_Lab_2_multiple_layer_LSTM.ipynb  C3_W3_Lab_3_Conv1D.ipynb  C3_W3_Lab_4_imdb_reviews_with_GRU_LSTM_Conv1D.ipynb  C3_W3_Lab_5_sarcasm_with_bi_LSTM.ipynb  (+1 more)
(+19 files in other folders)
