[tool.poetry]
name = "tensorflow-1-public"
version = "0.1.0"
description = ""
authors = ["Shikanime Deva <deva.shikanime@protonmail.com>"]

[tool.poetry.dependencies]
python = "~3.7"
tensorflow = "2.7.0"
scikit-learn = "1.0.1"
pandas = "1.1.5"
matplotlib = "3.2.2"
seaborn = "0.11.2"
jupyterlab = "^3.3.2"
Pillow = "^9.0.1"
gdown = "^4.4.0"
tensorflow-datasets = "4.0.1"
ipywidgets = "^7.7.0"

[tool.poetry.dev-dependencies]
tensorboard = "^2.8.0"
tensorboard-plugin-profile = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
